<resources>
    <string name="app_name">Empowerize</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landing_text">Revolutionise your job search with our empowering mobile app, connecting you with the right opportunities and employers.</string>
    <string name="delete">Delete</string>
    <string name="farm_manager">Farm_manager</string>
    <string name="roles_and_responsibilites">Roles and Responsibilities</string>
    <string name="job_type">Job type :</string>
    <string name="full_time">Full time</string>
    <string name="benefit">Benefit :</string>
    <string name="quli_text">Possesses a NIPM qualification in manufacturing.\n\n<br /> Possesses a minimum of 2-3 years of experience in a similar capacity in the plantation sector.\n\n<br />Thorough knowledge in food manufacturing and factory practices\n\nStrong understanding of replanting
and related agricultural practices..</string>
    <string name="benifit_details_text">Attractive remuneration package awaits for the ideal candidate.</string>
    <string name="edit">Edit</string>
    <string name="farmmanager">Farm Manager</string>
    <string name="job_role_name">Farm manager</string>
    <string name="edit_vacancy_details">Edit vacancy details</string>
    <string name="save_changes">Save Changes</string>
    <string name="galahitiyawa">Galahitiyawa</string>
    <string name="on_site">On site</string>
    <string name="agriculture_scientist">Agriculture Scientist</string>
    <string name="barawakumbuka_sri_lanka">Barawakumbuka Sri Lanka</string>
    <string name="organic_farmer">Organic Farmer</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="add_new_vacancy">Add new vacancy</string>
    <string name="create">Create</string>
    <string name="payment">Payment</string>
    <string name="job_role">Job role</string>
    <string name="card_number">Card Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="cvv">CVV</string>
    <string name="cash_holder">Cash holder</string>
    <string name="add_vacancy">Add Vacancy</string>
    <string name="cash_holder_name">Cash Holder Name</string>
    <string name="benefi">Benefit</string>
    <string name="salary">Salary</string>
    <string name="by_continuing_you_agree_to">By continuing you agree to</string>
    <string name="payment_policy">Payment policy</string>
    <string name="total_fee">Total fee</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvvtext">****</string>
    <string name="cont">Continue</string>
    <string name="location_text">Location</string>
    <string name="vacancy_added">Vacancy Added\nSuccessfully</string>
    <string name="title_activity_edit_job">edit_job</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pay_now">Pay Now</string>
    <string name="dowaload_recipt">Dowaload Recipt</string>
    <string name="vacancy_deleted_successfully">Vacancy Deleted Successfully</string>
    <string name="posted">Posted</string>
    <string name="post">Posted</string>
    <string name="add_your_vacancy">Add Your Vacancy</string>
    <string name="edit_your_vacancy">Edit Your Vacancy</string>
    <string name="posted_vacancy">Posted Vacancy</string>
    <string name="editttttttttt">Editttttttttt</string>
    <string name="update">Update</string>
    <string name="farmer">Farmer</string>
    <string name="matara_sri_lanka">Matara,Sri Lanka</string>
    <string name="add">Add</string>
    <string name="job">Job Role</string>
    <string name="sala">Salary</string>
    <string name="address">Address</string>
    <string name="vacancy_update_successfully">Vacancy Update Successfully</string>
    <string name="profile">Profile</string>
    <string name="wso2_is_an_open_source_middleware_platform_for_developing_integrating_and_managing_applications_and_services_efficiently_and_securely">WSO2 is an open-source middleware platform for developing, integrating, and managing applications and services efficiently and securely.</string>
    <string name="see_posted_vacancy">See Posted Vacancy</string>
</resources>