<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:andorid="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white"
    android:layout_marginRight="12dp"
    android:layout_marginLeft="12dp"
    app:cardCornerRadius="12dp"
    android:layout_marginTop="40dp">


    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="right">
        <TextView
            android:id="@+id/doc_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ID"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            />
        <TextView
            android:id="@+id/job_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_role"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salary"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/blue"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:layout_marginLeft="20dp"
            />

        <TextView
            android:id="@+id/roles_and_res_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roles_and_responsibilites"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginTop="20dp"
            android:textColor="@color/blue"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="30dp"
            android:textSize="22sp"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/baseline_edit_24"
            android:layout_marginRight="0dp"/>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="-35dp"

            android:src="@drawable/baseline_delete_24" />


    </LinearLayout>

</androidx.cardview.widget.CardView>